# maas-site-manager

./: .env  .gitignore  .launchpad.yaml  AGENTS.md  Dockerfile  HACKING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.env  docker-compose.yaml  package.json  pyproject.toml  rockcraft.yaml  setup.cfg  vite.config.ts
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  PROJECT.md  README.md  dev.nginx.conf  pyproject.toml  requirements.txt  setup.cfg  start-nginx-and-api.sh  tox.ini
backend/.github/: copilot.yml
backend/msm/: __init__.py  conftest.py  jwt.py  middleware.py  schema.py  settings.py  time.py
backend/msm/api/: __init__.py  _auth.py  _dependencies.py  _exceptions.py  _utils.py  auth.py
backend/msm/api/exceptions/: catalog.py  constants.py  middleware.py  responses.py
backend/msm/api/site/: _auth.py  auth.py
backend/msm/api/user/: _auth.py  _forms.py  auth.py  forms.py
backend/msm/apiserver/: auth.py  csv.py  dependencies.py  main.py  metrics.py  middleware.py  prometheus.py  utils.py
backend/msm/apiserver/db/: __init__.py  _debug.py  tables.py  types.py
backend/msm/apiserver/exceptions/: catalog.py  constants.py  middleware.py  responses.py
backend/msm/apiserver/schema/: __init__.py  fields.py  search.py  sorting.py
backend/msm/apiserver/service/: __init__.py  base.py  config.py  images.py  s3.py  settings.py  site.py  site_profiles.py  temporal.py  token.py  user.py
backend/msm/apiserver/site/: auth.py
backend/msm/apiserver/user/: auth.py  forms.py
backend/msm/cmd/: __init__.py  _action.py  _script.py  action.py
backend/msm/cmd/admin/: __init__.py  _create_user.py  _update_settings.py  create_user.py  update_settings.py
backend/msm/cmd/sampledata/: __init__.py  _fixtures.py  fixtures.py
backend/msm/common/: config_hash.py  enums.py  jwt.py  password.py  settings.py
backend/msm/common/api/: __init__.py  bootassets.py  images.py  selections.py
backend/msm/common/workflows/: sync.py
backend/msm/db/: __init__.py  _session.py  _setup.py  _tables.py  models.py  queries.py  tables.py
backend/msm/db/alembic/: __init__.py  alembic.ini  env.py
backend/msm/db/models/: __init__.py  _config.py  _settings.py  _site.py  _token.py  _user.py  images.py  site.py  user.py
backend/msm/db/queries/: __init__.py  _count.py  _search.py  _site.py  _token.py  _user.py
backend/msm/sampledata/: __init__.py  _db.py  _sites.py  _tokens.py  _users.py  db.py  images.py  sites.py  tokens.py  users.py
backend/msm/schema/: __init__.py  _models.py  _pagination.py  pagination.py
backend/msm/service/: __init__.py  _base.py  _config.py  _settings.py  _site.py  _token.py  _user.py  base.py  images.py  s3.py  temporal.py  user.py
backend/msm/snap/: __init__.py  _config.py  _env.py  _hooks.py
backend/msm/snap/templates/: nginx.conf
backend/msm/temporal/: worker.py
backend/msm/temporal/activities/: __init__.py  base.py  bootasset.py  images.py  simplestream.py
backend/msm/temporal/workflows/: __init__.py  delete.py  download_upstream.py  sync.py
backend/msm/testing/: app.py  db.py
backend/msm/user_api/: __init__.py  _auth.py  _base.py  _csv.py  _dependencies.py  _forms.py  _handlers.py  _jwt.py  _middleware.py  _prometheus.py  _schema.py  _setup.py
backend/msm/user_api/handlers/: __init__.py  login.py  root.py  sites.py  tokens.py  users.py
backend/msm/user_api/tests/: test_handlers.py
backend/scripts/: start-worker.sh
backend/temporal/: pyproject.toml
backend/temporal/resources/: worker.py
backend/temporal/resources/activities/: base.py  bootasset.py  download_upstream_activities.py  images.py  simplestream.py
backend/temporal/resources/management/: objectstore.py  utils.py
backend/temporal/resources/workflows/: download_upstream.py  sync.py
backend/temporal/scripts/: start-worker.sh
backend/temporal/tests/: test_download_upstream.py  test_download_upstream_activities.py  test_objectstore.py  test_sync.py  test_utils.py
backend/temporal/tests/activities/: __init__.py  test_bootassets.py  test_images.py  test_simplestream.py
backend/temporal/tests/workflows/: test_download_upstream.py  test_sync.py
backend/tests/: conftest.py  test_db.py  test_jwt.py  test_middleware.py  test_settings.py
backend/tests/api/: __init__.py  conftest.py  test_auth.py  test_csv.py  test_static.py  test_validation.py
backend/tests/api/site/: conftest.py  test_auth.py
backend/tests/api/user/: conftest.py  test_auth.py
backend/tests/apiserver/: conftest.py  test_auth.py  test_csv.py  test_db.py  test_exception_middleware.py  test_jwt.py  test_metrics.py  test_middleware.py  test_static.py  test_validation.py
backend/tests/apiserver/db/: test_alembic.py  test_debug.py  test_models.py
backend/tests/apiserver/schema/: test_sorting.py
backend/tests/apiserver/service/: conftest.py  test_base.py  test_config.py  test_images.py  test_s3.py  test_service_collection.py  test_settings.py  test_site.py  test_site_profiles.py  test_temporal.py  test_token.py  test_user.py
backend/tests/apiserver/site/: conftest.py  test_auth.py
backend/tests/apiserver/user/: conftest.py  test_auth.py
backend/tests/cmd/: test_action.py  test_admin.py  test_sampledata.py  test_script.py
backend/tests/cmd/admin/: test_create_user.py  test_update_settings.py
backend/tests/common/: test_config_hash.py  test_settings.py
backend/tests/db/: test_models.py
backend/tests/db/queries/: test_token.py  test_user.py
backend/tests/fixtures/: app.py  bootassets.py  client.py  db.py  env.py  factory.py
backend/tests/service/: conftest.py  test_base.py  test_config.py  test_images.py  test_s3.py  test_service_collection.py  test_settings.py  test_site.py  test_token.py  test_user.py
backend/tests/snap/: test_config.py
backend/tests/temporal/: test_utils.py  test_worker.py
backend/tests/temporal/activities/: test_base.py  test_bootassets.py  test_images.py  test_simplestream.py
backend/tests/temporal/workflows/: test_delete.py  test_download_upstream.py  test_sync.py
backend/tests/user_api/: conftest.py  test_auth.py  test_handlers.py
(+712 files in other folders)
