[metadata]
name = msm
description = MAAS Site Manager
version = 0.0.1
author = MAAS Developers
author_email = maas-devel@lists.launchpad.net

[options]
packages = find:
python_requires = >= 3.10
install_requires =
  fastapi
  SQLAlchemy[postgresql_asyncpg]

[options.packages.find]
exclude =
  *.tests
  *.tests.*

[options.extras_require]
testing =
  pytest
  pytest-asyncio
  pytest-postgresql
  psycopg  # for pytest-postgresql
  httpx # for fastapi.testclient

[globals]
lint_files = setup.py msm/

[flake8]
max-line-length = 79

[tox:tox]
skipsdist = True
envlist = test

[testenv:shell]
deps =
  -e .
  ipython
commands =
  {envbindir}/ipython

[testenv:test]
deps =
  -e .[testing]
commands =
  {envbindir}/pytest -vs {posargs}

[testenv:format]
deps =
  black
  isort
commands =
  {envbindir}/isort {[globals]lint_files}
  {envbindir}/black -q {[globals]lint_files}

[testenv:lint]
deps =
  black
  flake8
  isort
commands =
  {envbindir}/isort --check-only --diff {[globals]lint_files}
  {envbindir}/black --check {[globals]lint_files}
  {envbindir}/flake8 {[globals]lint_files}

[testenv:check]
deps =
  -e .[testing]
  mypy
commands =
  {envbindir}/mypy -p msm {posargs}

[testenv:run]
deps =
  -e .
  uvicorn
commands =
  {envbindir}/uvicorn --factory msm.user_api:create_app --reload {posargs}


